@@ -2,11 +2,9 @@ package br.com.letscode.dataproject.product.service;
 
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 
 import br.com.letscode.dataproject.product.dto.ProductResponse;
-import br.com.letscode.dataproject.product.model.Product;
 import br.com.letscode.dataproject.product.repository.ProductRepository;
 import lombok.RequiredArgsConstructor;
 
@@ -17,7 +15,6 @@ public class ProductService {
     private final ProductRepository productRepository;
 
     public List<ProductResponse> findAll() {
-        return productRepository.findAll().stream().map(ProductResponse::convert).collect(Collectors.toList());
+        return productRepository.findAll().stream().map(ProductResponse::convert).toList();
     }
-
 }
